--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,36 @@
-.App {
-  text-align: center;
+.app{
+    background-color: #f3f2ef;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__body {
+    display: flex;
+    margin-top: 35px;
+    max-width: 1200px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+@media screen and (min-width: 1000px) {
+	.app__body {
+		width: 95%;
+		max-width: 1600px;
+	}
 }
 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
+@media screen and (max-width: 700px) {
+	.app__body {
+		width: 90%;
+		max-width: 600px;
+		margin: auto;
 
-.App-link {
-  color: rgb(112, 76, 182);
-}
+		flex-direction: column;
+		order: 1;
+	}
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+	.app {
+		height: fit-content;
+	}
 }
